mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_del_opa1_csqs@3-193311170-TGGCG-G.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - frameshift_variant
    - frameshift_truncation
  putative_impact: high
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 1
    total: 31
  hgvs_g: g.193311170_193311174delinsG
  hgvs_n: n.174_177del
  hgvs_c: c.4_7del
  hgvs_p: p.Trp2AspfsTer15
  cdna_pos:
    ord: 174
    total: 6429
  cds_pos:
    ord: 4
    total: 3048
  protein_pos:
    ord: 2
    total: 1015
  distance: 0
  strand: 1
  messages: ~
