mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_del_opa1_csqs@3-193409910-GAAA-G.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - conservative_inframe_deletion
  putative_impact: moderate
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 30
    total: 31
  hgvs_g: g.193409911_193409913del
  hgvs_n: n.3213_3215del
  hgvs_c: c.3043_3045del
  hgvs_p: p.Lys1015Ter
  cdna_pos:
    ord: 3213
    total: 6429
  cds_pos:
    ord: 3043
    total: 3048
  protein_pos:
    ord: 1015
    total: 1015
  distance: 0
  strand: 1
  messages: ~
