mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_del_opa1_csqs@3-193409913-ATAA-A.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_lost
    - feature_elongation
    - conservative_inframe_deletion
  putative_impact: high
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 30
    total: 31
  hgvs_g: g.193409914_193409916del
  hgvs_n: n.3216_3218del
  hgvs_c: c.3046_3048del
  hgvs_p: p.Ter1016IleextTer12
  cdna_pos:
    ord: 3216
    total: 6429
  cds_pos:
    ord: 3046
    total: 3048
  protein_pos:
    ord: 1016
    total: 1015
  distance: 0
  strand: 1
  messages: ~
